--- a/src/pages/contact/index.astro
+++ b/src/pages/contact/index.astro
@@ -1,25 +1,29 @@
 ---
+import Heading from "@/components/Heading.astro";
+import Text from "@/components/Text.astro";
+import TextLink from "@/components/TextLink.astro";
 import Layout from "@/layouts/Layout.astro";
 ---
 
 <Layout title="contact| Toru Yaginuma✌🏻" current="contact">
-  <h2>お問合せ</h2>
-  <div class="block">
-    <h3>デザインについて😄</h3>
-    <p>
-      「シンプルな中にユニークさ・目新しさを生み出す」をモットーにしています。
-      演出についても必要な箇所に絞り、効果的に表現付けしていきます。
-      コテコテ派手なデザインは対応しておりません。
-    </p>
-  </div>
+  <Heading type="section" text="お問合せ" />
+  <Heading type="block" text="デザインについて😄" />
+  <Text size="md">
+    「シンプルな中にユニークさ・目新しさを生み出す」をモットーにしています。
+    演出についても必要な箇所に絞り、効果的に表現付けしていきます。
+    コテコテ派手なデザインは対応しておりません。
+  </Text>
 
-  <div class="block">
-    <h3>対応状況について😄</h3>
-    <p>規模によりますので、ご相談ください。</p>
-  </div>
+  <Heading type="block" text="対応状況について😄" />
+
+  <Text size="md">
+    「シンプルな中にユニークさ・目新しさを生み出す」をモットーにしています。
+    演出についても必要な箇所に絞り、効果的に表現付けしていきます。
+    コテコテ派手なデザインは対応しておりません。
+  </Text>
 
   <div class="block">
     <h3>ご依頼・ご相談は下記アドレスよりお願いします。😄</h3>
-    <a href="">toru45s@gmail.com</a>
+    <TextLink href="mailto:toru45s@gmail.com">toru45s@gmail.com</TextLink>
   </div>
 </Layout>
