--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,5 +1,6 @@
 // colors
 $color-primary: #55ff33;
+$color-secondary: #22cc00;
 $color-font: #2b273a;
 $color-link: #f00;
 $color-border: #848484;
@@ -36,6 +37,7 @@ $font-size: (
   // 32px
 );
 $font-weight: (
+  thin: 300,
   regular: 400,
   medium: 500,
   bold: 700,
