--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -5,6 +5,7 @@ $color-font: #2b273a;
 $color-link: #f00;
 $color-border: #848484;
 $color-white: #fff;
+$color-bg: #f2f1f1;
 
 // 横幅
 $min-width: 320px;
