--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -28,13 +28,13 @@ const { current } = Astro.props;
 <style lang="scss">
   .navigation {
     display: inline-block;
-    background: #fff;
+    background: $color-bg;
     border: 2px solid $color-primary;
     padding: map-get($margin, 1);
     z-index: map-get($z-index, base);
 
     &__lists {
-      margin: map-get($margin, 0.25) 0 0 0;
+      margin: map-get($margin, 0.5) 0 0 0;
       font-weight: map-get($font-weight, thin);
     }
 
