--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -7,7 +7,7 @@ html {
     sans-serif;
   font-size: $font-size-base;
   font-weight: map-get($font-weight, regular);
-  background-color: $color-white;
+  background-color: $color-bg;
   color: $color-font;
   line-height: map-get($leading, normal);
   font-feature-settings: "palt";
@@ -36,6 +36,7 @@ img {
 h1,
 h2,
 h3,
+h4,
 p {
   margin: 0;
 }
