--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,6 @@ import Works from "@/components/Works.astro";
 import Layout from "@/layouts/Layout.astro";
 ---
 
-<Layout title="works | Toru Yaginuma✌🏻" current="works">
+<Layout title="Works | Toru Yaginuma✌🏻" current="works">
   <Works />
 </Layout>
