--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,6 +1,5 @@
 // colors
-$color-primary: #55ff33;
-$color-secondary: #22cc00;
+$color-primary: #33cc33;
 $color-font: #2b273a;
 $color-link: #f00;
 $color-border: #848484;
