update TextLink クリック範囲を調整

--- a/src/components/TextLink.astro
+++ b/src/components/TextLink.astro
@@ -32,6 +32,7 @@ const isExternal = href?.indexOf("http") !== -1;
 
 <style lang="scss">
   .text-link {
+    width: fit-content;
     color: $color-primary;
     font-weight: map-get($font-weight, thin);
 
