--- a/src/components/Work.astro
+++ b/src/components/Work.astro
@@ -33,12 +33,10 @@ const { image, href, title, role, comment } = Astro.props;
     }
 
     &__image {
-      // width: 75%;
+      width: 100%;
       height: 0;
-      padding-bottom: 40%;
+      padding-bottom: 50%;
       overflow: hidden;
-      // margin: auto;
-      // clip-path: polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%);
     }
 
     &__info {
