update pages 文言修正

--- a/src/pages/contact/index.astro
+++ b/src/pages/contact/index.astro
@@ -7,7 +7,7 @@ import Section from "@/layouts/Section.astro";
 ---
 
 <Layout title="Contact" currentPage="contact" headingPage="Contact">
-  <Section heading="ご連絡先やSNSアカウントの一覧です。">
+  <Section heading="連絡先やSNSアカウント一覧">
     <Block heading="メールアドレス" layout="stack">
       <Text size="md">
         <TextLink href="mailto:toru45s@gmail.com">toru45s@gmail.com</TextLink>
@@ -15,6 +15,7 @@ import Section from "@/layouts/Section.astro";
     </Block>
     <Block heading="SNS" layout="stack">
       <TextLink href="https://github.com/t-yaginuma">github</TextLink>
+      <TextLink href="https://www.linkedin.com/in/toru-yaginuma-8124a8277/">linkedin</TextLink>
     </Block>
   </Section>
 </Layout>
