--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,35 +3,55 @@ import Text from "@/components/Text.astro";
 import Block from "@/layouts/Block.astro";
 import Layout from "@/layouts/Layout.astro";
 import Section from "@/layouts/Section.astro";
+import TyDiv from "@/layouts/TyDiv.astro";
 ---
 
 <Layout title="" currentPage="top" headingPage="Top">
   <Section
-    heading="初めまして フロントエンドエンジニアの柳沼亨と申します。"
+    heading="私について"
     isMaxWidth
   >
+  <Block heading="はじめまして、柳沼 亨 (ヤギヌマトオル)と申します。" layout="stack">
     <Text size="md">
-      私はネットワークエンジニアとしてITの業界に入り、ウェブデベロッパーへ転身して約４年半、受託のウェブ制作、開発会社で経験を積んできました。特にフロントエンド領域の実装、デザイナーと協力して作るUIの実装や、デザインシステムの構築を最も好んでいますが、ものづくり全般に関わることが好きで、Laravelを通したバックエンドの実装、AWSやAzureを用いたCI/CDを含むインフラ構築などの実装も行い、プロジェクト毎に様々な経験を積んできました。
+      私はウェブ開発者として約5年間、受託のウェブ制作・開発会社で開発経験を積んできました。
     </Text>
-    <Block heading="私の特徴を3点にまとめると、以下になります。" layout="stack">
-      <Block heading="好奇心、独学力、主体性があります。" isSubBlock>
-        <Text size="md">
-          未知、未体験の事柄を知ったり体験することが好きで、日々勉強や活動を続けています。
-          私は音楽大学を卒業後、音楽業界で活動していました。その後、独学で技術資格を取得しネットワークエンジニアへ転職、またその後、ウェブデベロッパーへ転身しフロントエンドを中心にフルスタックな開発経験を積んできた実績がございます。
-        </Text>
-      </Block>
-      <Block heading="優先順位を立てるのが得意です。" isSubBlock>
-        <Text size="md">
-          得に、やらない事の選別に力を入れています。
-          得意な事、貢献できることに時間を費やすことで、パフォーマンスを上げられるように集中しています。やらないことを選別することは、自分のやるべきことの土壌づくりであると考えています。
-        </Text>
-      </Block>
-      <Block heading="周りのメンバーを巻き込み、行動力があります。" isSubBlock>
-        <Text size="md">
-          フロントエンジニアとして、毎週のメンバーとの勉強会や定期的な面談や、他社のエンジニアとの勉強会などの活動も行ってきた経験がございます。
-        </Text>
-      </Block>
-    </Block>
+    <Text size="md">
+      フルスタック開発者としてプロジェクトに関わっていくことを好んでいますが、中でもユーザーとAPIを繋ぐ責務を請け負う、フロントエンド領域での開発を最も好んでおり、デザイナーと協力してつくる美しいUI画面の開発や、再利用しやすいコンポーネント、ロジックの設計・開発を行うことに情熱を持っています。また、Laravelを用いたバックエンド開発や、前職のネットワークエンジニアとしての経験を活かしたAWS中心としたインフラ構築などの実装も行い、プロジェクト毎に様々な経験を積んできました。
+    </Text>
+    <Text size="md">
+      私の特徴を3点挙げさせていただくと、以下になります。
+    </Text>
+    <TyDiv>
+      <Text size="md" isBold>
+        好奇心が強く主体性があります。
+      </Text>
+      <Text size="md">
+        未知、未体験の事柄を知ったり体験することが好きで、日々勉強や活動を続けています。
+      </Text>
+      <Text size="md">
+        私は最初のキャリアとして音楽業界で活動を行っておりましたが、ウェブデベロッパーへ転身しフロントエンドを中心にフルスタックな開発経験を積んでいる実績がございます。
+      </Text>
+    </TyDiv>
+    <TyDiv>
+      <Text size="md" isBold>
+        優先順位を立てるのが得意です。
+      </Text>
+      <Text size="md">
+        得にやらない事の選別に力を入れており、得意な事に時間を費やすことで、パフォーマンスを上げられるようにしています。やらないことを選別することは、自分のやるべきことの土壌づくりであると考えています。
+      </Text>
+    </TyDiv>
+    <TyDiv>
+      <Text size="md" isBold>
+        コミュニケーションにおいて強い表現を避けます。
+      </Text>
+      <Text size="md">
+        文字ベースのコミュニケーションは冷たい印象になりがちだと考えています。そのため、できるだけ、シンプルかつ柔らかい表現を心がけています。また必要あれば、発言の背景なども付け加えるようにし、誤解をできるだけ避けるようにしています。
+      </Text>
+    </TyDiv>
     <Text size="md">よろしくお願いいたします🙇‍♂️</Text>
+  </Block>
+
+
+
   </Section>
 </Layout>
